--- a/public/template/mainContents.template.html
+++ b/public/template/mainContents.template.html
@@ -102,5 +102,5 @@
   <p>source : <a href="{{mainCtrl.link.$value}}">{{mainCtrl.link.$value}}</a></p>
 
   <br><br><br><br>
-  <p style="color:gray">2016-2017 KYUBIN HAN ALL RIGHTS RESERVED.</p>
+  <p style="color:gray">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2016-2017 Kyubin Han All Rights Reserved.</p>
 </article>
