--- a/public/template/home.template.html
+++ b/public/template/home.template.html
@@ -10,14 +10,12 @@
                     <div class="intro-message">
                         <h1>Translate Together!</h1>
                         <h2>Translate collaboratively with others for immigration to Canada</h2>
-                        <h3>Want to contribute? please log in first :) </h3> <br>
-
-
-
-                        <ul class="list-inline intro-social-buttons">
+                        <h3 ng-show="mainCtrl.firebaseUser">All right! Let's check out</h3>
+                        <h3 ng-hide="mainCtrl.firebaseUser">Ready to contribute? please log in first :) </h3> <br>
+                        <ul ng-hide="mainCtrl.firebaseUser" class="list-inline intro-social-buttons">
                             <li>
                               <a ng-click="mainCtrl.auth.$signInWithPopup('google')" class="btn btn-default btn-social btn-google">
-                                <span class="fa fa-google"></span> Sign in with Google
+                                <span class="fa fa-google"></span>Sign in with Google
                               </a>
                             </li>
                             <li>
@@ -30,7 +28,33 @@
                                 <span class="fa fa-twitter"></span> Sign in with Twitter
                               </a>
                             </li>
+                            <!-- <li> or go to</li>
+                            <li>
+                              <a class="btn btn-default"> Express Entry </a>
+                            </li>  -->
                         </ul>
+
+
+
+                        <ul ng-show="mainCtrl.firebaseUser" class="list-inline intro-social-buttons">
+                            <li>
+                              <a ui-sref="threeParameters({category:'ExpressEntry', para1:'Home', numOfPara: 8})" class="btn btn-default btn-social btn-google">  <span class="fa fa-folder-open"></span> Express Entry
+                              </a>
+                            </li>
+                            <!-- <li>
+                              <a class="btn btn-default">
+                                Sign in with Facebook
+                              </a>
+                            </li>
+                            <li>
+                              <a class="btn btn-default">
+                                Sign in with Twitter
+                              </a>
+                            </li> -->
+
+                        </ul>
+
+
                     </div>
                 </div>
             </div>
@@ -38,7 +62,7 @@
         </div>
         <!-- /.container -->
         <div class="container"> <br><br><br>
-          <p>2016-2017 KYUBIN HAN ALL RIGHTS RESERVED.</p>
+          <p style="color:gray">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2016-2017 Kyubin Han All Rights Reserved.</p>
         </div>
     </div>
     <!-- /.intro-header -->
