--- a/public/template/dir-nav.html
+++ b/public/template/dir-nav.html
@@ -53,7 +53,7 @@
             <li><a href="#">will</a></li>
             <li><a href="#">be ready soon</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">thanks!</a></li>
           </ul>
          </li>
 
@@ -66,7 +66,7 @@
             <li><a href="#">will</a></li>
             <li><a href="#">be ready soon</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">thanks!</a></li>
           </ul>
          </li>
 
@@ -79,14 +79,14 @@
              <li><a href="#">will</a></li>
              <li><a href="#">be ready soon</a></li>
              <li role="separator" class="divider"></li>
-             <li><a href="#">Separated link</a></li>
+             <li><a href="#">thanks!</a></li>
            </ul>
           </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
 
-        <li ng-show="mainCtrl.firebaseUser"> <a> Hello, {{ mainCtrl.firebaseUser.displayName }} </a> </li>
+        <li ng-show="mainCtrl.firebaseUser"> <a><span ng-show="mainCtrl.users[mainCtrl.firebaseUser.uid].contribution">You've earned {{mainCtrl.users[mainCtrl.firebaseUser.uid].contribution}} points! </span>Thanks, {{ mainCtrl.firebaseUser.displayName }} </a> </li>
         <li class="dropdown">
 
           <a ng-show="mainCtrl.firebaseUser" ng-click="mainCtrl.auth.$signOut()"> Sign Out</a>
