--- a/public/template/home.template.html
+++ b/public/template/home.template.html
@@ -9,9 +9,8 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Translate Together!</h1>
-                        <h2>Translate collaboratively with others for immigration to Canada</h2>
-                        <h3 ng-show="mainCtrl.firebaseUser">All right! Let's check out</h3>
-                        <h3 ng-hide="mainCtrl.firebaseUser">Ready to contribute? please log in first :) </h3> <br>
+                        <h2 class="topPadding">Translate collaboratively with others for immigration to Canada</h2>
+                        <h3 ng-hide="mainCtrl.firebaseUser">Ready to contribute? please log in first :) </h3>
                         <ul ng-hide="mainCtrl.firebaseUser" class="list-inline intro-social-buttons">
                             <li>
                               <a ng-click="mainCtrl.auth.$signInWithPopup('google')" class="btn btn-default btn-social btn-google">
@@ -33,24 +32,13 @@
                               <a class="btn btn-default"> Express Entry </a>
                             </li>  -->
                         </ul>
+                        <h3 class="topPadding"> <span ng-hide="mainCtrl.firebaseUser">or</span> <span ng-show="mainCtrl.firebaseUser">All right! let's</span> check out </h3>
 
-
-
-                        <ul ng-show="mainCtrl.firebaseUser" class="list-inline intro-social-buttons">
+                        <ul class="list-inline intro-social-buttons">
                             <li>
-                              <a ui-sref="threeParameters({category:'ExpressEntry', para1:'Home', numOfPara: 8})" class="btn btn-default btn-social btn-google">  <span class="fa fa-folder-open"></span> Express Entry
+                              <a style="background-color: #e7e7e7;" ui-sref="threeParameters({category:'ExpressEntry', para1:'Home', numOfPara: 8})" class="btn btn-default btn-social"><span class="fa fa-folder-open"></span> Express Entry
                               </a>
                             </li>
-                            <!-- <li>
-                              <a class="btn btn-default">
-                                Sign in with Facebook
-                              </a>
-                            </li>
-                            <li>
-                              <a class="btn btn-default">
-                                Sign in with Twitter
-                              </a>
-                            </li> -->
 
                         </ul>
 
