--- a/public/template/mainContents.template.html
+++ b/public/template/mainContents.template.html
@@ -3,14 +3,14 @@
 <article class="container" style="padding-top: 70px;">
   <section class="row">
     <!-- <a ui-sref="threeParameters({category: mainCtrl.arrayOfPath[0], para1: 'Home', numOfPara: 8})"> {{mainCtrl.arrayOfPath[0]}} </a> > <span>{{mainCtrl.path}}</span> -->
-    <p class="section-heading">{{mainCtrl.path}}</p>
-    <h2 class="section-heading col-md-8">{{mainCtrl.title}}</h2>
-    <h2 class="section-heading col-md-4">Language : Korean</h2>
+    <p class="section-heading">{{mainCtrl.path}} </p>
+    <!-- <h2 class="section-heading col-md-6">{{mainCtrl.title}} </h2> -->
+    <!-- <h2 class="section-heading col-md-6">Language: Korean</h2> -->
     <!-- "ui-sref="threeParameters({category:'ExpressEntry', para1:'Home', numOfPara: 8})" -->
     <!-- <div class="col-md-6" ><h3 class="section-heading">TRANSLATION</h3></div> -->
 
   </section>
-
+  <p>Date modified : {{mainCtrl.dateModified.$value}}</p>
   <!-- translationss is an array of firebaseArray -->
   <section id="first-ng-repeat" ng-repeat="paragraph in mainCtrl.paragraphs" ng-init="translations = mainCtrl.ArrayOfTranslations[$index]">
     <div class="row highlighted">
@@ -24,15 +24,15 @@
       </div>
       <!-- end of left side -->
 
-      <br>
+
       <!-- ALL TRANSLATIONS FOR EACH PARAGRAPHS (remove limitTo filter)-->
       <!-- JUST ONE LATEAST TRANSLATION FOR EACH PARAGRAPHS just add limitTo:'1' -->
       <!-- translations is a FirebaseArray -->
       <div ng-hide="mainCtrl.showText[$index]" class="col-md-6">
 
         <div id="second-ng-repeat" ng-repeat="translation in translations | orderBy:mainCtrl.orderBy:true | startFrom: mainCtrl.currentPage[$index] | limitTo:mainCtrl.pageSize" >
-          Thanks! {{translation.user}} &nbsp;&nbsp; Date: {{mainCtrl.convertTimestamp(translation.timestamp);}} <br>
-          <div ng-bind-html="translation.content"></div><br>
+          <h5>Thanks! {{translation.user}} &nbsp;&nbsp; Date: {{mainCtrl.convertTimestamp(translation.timestamp);}}</h5>
+          <div ng-bind-html="translation.content"></div> <br>
 
           <button ng-if="mainCtrl.firebaseUser.uid==mainCtrl.adminId" class="btn btn-warning" ng-click="mainCtrl.removeTranslation(translations, translation);">delete</button> &nbsp;
 
@@ -74,7 +74,7 @@
       <div ng-show="mainCtrl.showText[$index]" class="col-md-6">
         <form ng-submit="mainCtrl.addTranslation(translations, $index)">
           <textarea class="form-control" rows="10" ng-model="mainCtrl.content[$index]"></textarea><br>
-          <p>To protect contents from being edited or vandalized by others, <br>your IP address({{mainCtrl.userIpaddress}}) will be recorded permanently in the history.</p>
+          <p>To protect contents from disruption or vandalism, your IP address({{mainCtrl.userIpaddress}}) will be recorded in the history.</p>
           <button class="btn btn-success" type="submit" ng-click="mainCtrl.reload(); mainCtrl.showText[$index]=false;">Save</button> &nbsp;&nbsp;
 
           <!-- <button class="btn btn-success" type="submit" ng-click="mainCtrl.showText[$index]=false;">Save</button> &nbsp;&nbsp; -->
