addTranslation separated into several methods

--- a/public/styles/landing-page.css
+++ b/public/styles/landing-page.css
@@ -60,7 +60,7 @@ h6 {
     text-align: center;
     /*color: #f8f8f8;*/
     color: #f7f7f7;
-    background: url(https://images4.alphacoders.com/722/72234.jpg) no-repeat center center;
+    background: url(../img/flag-dark.jpg) no-repeat center center;
     background-size: cover;
 }
     /*http://livehdwallpaper.com/wp-content/uploads/2015/05/Flag-of-Canada-HD-Pics.jpg*/
