--- a/public/template/home.template.html
+++ b/public/template/home.template.html
@@ -9,7 +9,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Translate Together!</h1>
-                        <h2 class="topPadding">Translate collaboratively with others for immigration to Canada</h2>
+                        <h2 class="topPadding">Translate documents collaboratively to achieve the same goal!</h2>
                         <h3 ng-hide="mainCtrl.firebaseUser">Ready to contribute? please log in first :) </h3>
                         <ul ng-hide="mainCtrl.firebaseUser" class="list-inline intro-social-buttons">
                             <li>
@@ -50,7 +50,7 @@
         </div>
         <!-- /.container -->
         <div class="container"> <br><br><br>
-          <p style="color:gray">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2016-2017 Kyubin Han All Rights Reserved.</p>
+          <p>Copyright &copy; 2016-2017 Kyubin Han All Rights Reserved.</p>
         </div>
     </div>
     <!-- /.intro-header -->
