--- a/public/template/mainContents.template.html
+++ b/public/template/mainContents.template.html
@@ -19,7 +19,7 @@
       <div class="col-md-6">
         <div ng-bind-html="paragraph.english"></div>
         <!--ng-show="mainCtrl.firebaseUser"-->
-        <button class="btn btn-primary" ng-hide="mainCtrl.showText[$index]" ng-click="mainCtrl.showText[$index]=true; mainCtrl.createUserIpaddress();">
+        <button style="margin-bottom:15px" class="btn btn-primary" ng-hide="mainCtrl.showText[$index]" ng-click="mainCtrl.showText[$index]=true; mainCtrl.createUserIpaddress();">
           Translate! </button>
       </div>
       <!-- end of left side -->
@@ -80,7 +80,7 @@
           <!-- <button class="btn btn-success" type="submit" ng-click="mainCtrl.showText[$index]=false;">Save</button> &nbsp;&nbsp; -->
 
 
-          <a href="" class="" ng-click="mainCtrl.showText[$index]=false">cancel</a>
+          <a href="" ng-click="mainCtrl.showText[$index]=false">cancel</a>
 
 
         </form>
@@ -102,5 +102,5 @@
   <p>source : <a href="{{mainCtrl.link.$value}}">{{mainCtrl.link.$value}}</a></p>
 
   <br><br><br><br>
-  <p style="color:gray">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2016-2017 Kyubin Han All Rights Reserved.</p>
+  <p style="color:gray">Copyright &copy; 2016-2017 Kyubin Han All Rights Reserved.</p>
 </article>
